kubernetes-manifests/proto-sample-server/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    #nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
  name: proto-sample-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: proto-sample.dev.abc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proto-sample-server
            port:
              number: 1000
  tls:
  # This secret must exist beforehand
  # The cert must also contain the subj-name proto-sample.dev.abc.com
  # https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/PREREQUISITES.md#tls-certificates
  - secretName: dev.abc.com
    hosts:
      - proto-sample.dev.abc.com
